fix: fix css page overflowing

--- a/src/index.css
+++ b/src/index.css
@@ -25,7 +25,7 @@ ul {
 
 header {
   height: 70px;
-  width: 100%;
+  width: auto;
   /* display: flex; */
   justify-content: space-between;
   align-items: center;
